--- a/game.html
+++ b/game.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Tilitoli Játék</title>
+    <script src="app.js" defer></script>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Tilitoli Játék</h1>
-    </header>
-    <main>
-        <a href="./game.html">Játék indítása!</a>
-    </main>
+
 </body>
 </html>
