--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <h1 id="bemutat">T i l i t o l i J á t é k</h1>
+        <div class="logo-container">
+            <h1 id="page-logo">T i l i t o l i J á t é k</h1>
+        </div>
+        
     </header>
     <main>
         <main>
@@ -29,7 +32,7 @@
                             <img src="./img/tilitoli1" class="card-img-top mx-auto" alt="Kép a játékról." name="Kép a játékról">
                             <div class="card-body">
                                 <h5 class="card-title">A Tili-Toli játék menete</h5>
-                                <p class="card-text">a Tili-Toli játék menete rendkívűl egyszerű. Úgy kell sorba raknod a négyzeteket hogy egyszerre csak egyet változtathatsz meg a helyéről.A kockákat nem szedheted ki a helyéről, csak is mozgatni lehet.</p>
+                                <p class="card-text">a Tili-Toli játék menete rendkívűl egyszerű. Úgy kell sorba raknod a négyzeteket hogy egyszerre csak egyet változtathatsz meg a helyéről. A kockákat nem szedheted ki a helyéről, csak is mozgatni lehet.</p>
                             </div>
                         </div>
                     </div>
