--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         <div class="container">
-
+            <div class="box" id="_"></div>
         </div>
     </main>
 </body>
