--- a/game.html
+++ b/game.html
@@ -35,6 +35,13 @@
     <main>
         <div class="container">
             <div class="box" id="_"></div>
+            
+        </div>
+        <div class="Buttons">
+            <button class="up" type="button">⬆</button>
+            <button class="down" type="button">⬇</button>
+            <button class="right" type="button">➡</button>
+            <button class="left"type="button">⬅</button>
         </div>
     </main>
 </body>
