--- a/game.html
+++ b/game.html
@@ -38,10 +38,10 @@
             
         </div>
         <div class="Buttons">
-            <button class="up" type="button">⬆</button>
-            <button class="down" type="button">⬇</button>
-            <button class="right" type="button">➡</button>
-            <button class="left"type="button">⬅</button>
+            <a class="up">⬆</a>
+            <a class="down">⬇</a>
+            <a class="right">➡</a>
+            <a class="left">⬅</a>
         </div>
     </main>
 </body>
