--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <a class="button" href="./index.html" role="button">
         <span>Kilépés</span>
         <div class="icon">
-          <i class="fa fa-remove" style="font-style: normal">↩</i>
+          <i class="fa fa-remove" style="font-style: normal">ᐊ</i>
           <i class="fa fa-check"></i>
         </div>
       </a>
