--- a/game.html
+++ b/game.html
@@ -34,7 +34,12 @@
     </header>
     <main>
         <div class="container">
-            <div class="box" id="_"></div>
+            <div class="EmptyBoxes">
+                <div class="box" id="_"></div>
+            </div>
+            <div class="NormalBoxes">
+
+            </div>
             
         </div>
         <div class="Buttons">
