--- a/game.html
+++ b/game.html
@@ -44,11 +44,11 @@
     </header>
     <main>
         <div class="container">
-            <div class="box" id="_"></div>
+            <div class="boxEmpty" id="_"></div>
             
         </div>
         <div class="Buttons">
-            <a class="up">⬆</a>
+            <a class="up" id="asd">⬆</a>
             <a class="down">⬇</a>
             <a class="right">➡</a>
             <a class="left">⬅</a>
