--- a/game.html
+++ b/game.html
@@ -35,7 +35,7 @@
                             <use xlink:href="#s-text" class="text-copy"></use>
                             <use xlink:href="#s-text" class="text-copy"></use>
                             <use xlink:href="#s-text" class="text-copy"></use>
-                            <use xlink:href="#s-text" class="text-copy"></use>
+                            <use xlink:href="#s-text" class="text-copy" id="szoveg"></use>
                         </g>
                     </svg>
                 </div>
@@ -47,12 +47,12 @@
             <div class="boxEmpty" id="_"></div>
             
         </div>
-        <div class="Buttons">
+        <!-- <div class="Buttons">
             <a class="up" id="asd">⬆</a>
             <a class="down">⬇</a>
             <a class="right">➡</a>
             <a class="left">⬅</a>
-        </div>
+        </div> -->
     </main>
 </body>
 </html>
