--- a/game.html
+++ b/game.html
@@ -52,6 +52,7 @@
             <a class="down">⬇</a>
             <a class="right">➡</a>
             <a class="left">⬅</a>
+            <a class="shuffle">Keverés</a>
         </div> -->
     </main>
 </body>
