--- a/game.html
+++ b/game.html
@@ -47,13 +47,8 @@
             <div class="boxEmpty" id="_"></div>
             
         </div>
-        <!-- <div class="Buttons">
-            <a class="up" id="asd">⬆</a>
-            <a class="down">⬇</a>
-            <a class="right">➡</a>
-            <a class="left">⬅</a>
-            <a class="shuffle">Keverés</a>
-        </div> -->
+        <button class="shuffle">⟳</a>
+        
     </main>
 </body>
 </html>
