--- a/game.html
+++ b/game.html
@@ -43,12 +43,13 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <div class="boxEmpty" id="_"></div>
+        <div class="gradient-border">
+            <div class="container">
+                <div class="boxEmpty" id="_"></div>
             
+            </div>
+            <button class="shuffle">⟳</a>
         </div>
-        <button class="shuffle">⟳</a>
-        
     </main>
 </body>
 </html>
