--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="row mt-5"> <!-- mt-4 osztály hozzáadása -->
                     <div class="col-sm-4 mb-3 mb-sm-0">
                         <div class="card">
-                            <img src="./img/tilitoli1" class="card-img-top mx-auto" alt="Legnépszerűbb változat" name="Legnépszerűbb változat">
+                            <img src="./img/tilitoli1.png" class="card-img-top img-thumbnail mx-auto" alt="Legnépszerűbb változat" name="Legnépszerűbb változat">
                             <div class="card-body">
                                 <h5 class="card-title">Tili-Toli története</h5>
                                 <p class="card-text">Noyes Chapman talált fel 1880-ban, de Sam Loydot gyakran tévesen tartják számon a csúszó rejtvények népszerűvé tételében azon hamis állítása alapján, hogy ő találta fel a tizenöt rejtvényt.</p>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-sm-4 mb-3 mb-sm-0">
                         <div class="card">
-                            <img src="./img/tilitoli1" class="card-img-top mx-auto" alt="Kép a játékról." name="Kép a játékról">
+                            <img src="./img/segitseg1.png" class="card-img-top img-thumbnail mx-auto" alt="Kép a játékról." name="Kép a játékról">
                             <div class="card-body">
                                 <h5 class="card-title">A Tili-Toli játék menete</h5>
                                 <p class="card-text">a Tili-Toli játék menete rendkívűl egyszerű. Úgy kell sorba raknod a négyzeteket hogy egyszerre csak egyet változtathatsz meg a helyéről. A kockákat nem szedheted ki a helyéről, csak is mozgatni lehet.</p>
