--- a/game.html
+++ b/game.html
@@ -45,11 +45,13 @@
     <main>
         <div class="gradient-border">
             <div class="container">
-                <div class="boxEmpty" id="_"></div>
+                <div class="boxEmpty" id=""></div>
             
             </div>
             <button class="shuffle">⟳</a>
+            
         </div>
+        <button class="check"type="button">Ellenőrzés</button>
     </main>
 </body>
 </html>
