--- a/game.html
+++ b/game.html
@@ -51,7 +51,13 @@
             <button class="shuffle">⟳</a>
             
         </div>
-        <button class="check"type="button">Ellenőrzés</button>
+        <button class='check'><span class='glowing-txt'><span class='faulty-letter'>E</span>ll<span class='faulty-letter'>enőrz</span>és</span></button>
+
+        <!-- Segitség gomb -->
+        <div class="help-button">
+            ?
+            <span class="tooltip"><span class="black">Ha eltévedtél,  vagy megzavarodtál a megoldás keresése közben, az <strong>újrakeverés</strong> gombbal bármikor újrakezdheted!</span></span>
+          </div>
     </main>
 </body>
 </html>
