--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-sm-4 mb-3 mb-sm-0">
                         <div class="card">
-                            <img src="img/segitseg.png" class="card-img-top img-thumbnail mx-auto" alt="Kép a játékról." name="Kép a játékról" id="kartya2">
+                            <img src="img/segitseg3.png" class="card-img-top img-thumbnail mx-auto" alt="Kép a játékról." name="Kép a játékról" id="kartya2">
                             <div class="card-body">
                                 <h5 class="card-title">A Tili-Toli játék menete</h5>
                                 <p class="card-text">a Tili-Toli játék menete rendkívűl egyszerű. Úgy kell sorba raknod a négyzeteket hogy egyszerre csak egyet változtathatsz meg a helyéről. A kockákat nem szedheted ki a helyéről, csak is mozgatni lehet.</p>
