--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
                         </symbol>
 
                         <g class = "g-ants">
-                        
+                        <!-- Logo -->
                             <use xlink:href="#s-text" class="text-copy"></use>
                             <use xlink:href="#s-text" class="text-copy"></use>
                             <use xlink:href="#s-text" class="text-copy"></use>
@@ -43,6 +43,7 @@
         </div>
     </header>
     <main>
+        <!-- Játék keret -->
         <div class="gradient-border">
             <div class="container">
                 <div class="boxEmpty" id=""></div>
