--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tilitoli Játék</title>
 </head>
 <body>
-    <header>
+    <header><!-- Logo -->
         <div class="logo-container">
             <h1 id="page-logo">T i l i t o l i J á t é k</h1>
         </div>
@@ -17,6 +17,7 @@
     <main>
         <main>
             <div class="main-container">
+                <!-- Kártyák -->
                 <div class="row mt-5"> <!-- mt-4 osztály hozzáadása -->
                     <div class="col-sm-4 mb-3 mb-sm-0">
                         <div class="card">
@@ -27,6 +28,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Kártyák -->
                     <div class="col-sm-4 mb-3 mb-sm-0">
                         <div class="card">
                             <img src="img/segitseg3.png" class="card-img-top img-thumbnail mx-auto" alt="Kép a játékról." name="Kép a játékról" id="kartya2">
@@ -38,6 +40,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Start gomb -->
             <div class="jatek-start">
                 <a id="a1szv" href="./game.html">Játék indítása!</a>
             </div>
